fixes text breaking issue on mobile devices

--- a/src/assets/scss/layout/_tickets.scss
+++ b/src/assets/scss/layout/_tickets.scss
@@ -35,6 +35,7 @@
         .inner {
             flex-direction: column;
             text-align: center;
+            header,
             h2 {
                 width: 100%;
             }
